# didin-facil

./: .coverage  .dockerignore  .editorconfig  .env.n8n.example  .env.production  .env.railway.example  .gitignore  .railwayignore  .vercelignore  ACCEPTABLE_USE_POLICY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMO_USAR.md  CONTRIBUTING.md  COOKIE_POLICY.md  DEBUG_BROWSER_CONSOLE.js  DEBUG_CHECKLIST.md  DEPLOY.md  Justfile  LICENSE  LIVE_TEST_GUIDE.md  Makefile  PRIVACY_POLICY.md  Procfile  README.md  RELEASE_GUIDE.md  SECURITY.md  TERMS_OF_SERVICE.md  _railway_info.txt  auth_test_output_2.txt  auth_test_output_3.txt  auth_test_output_4.txt  auth_test_output_5.txt  auth_test_output_6.txt  cleanup_project.sh  coverage.json  coverage.xml  debug_mobile.html  ecosystem.config.js  index.html  (+24 more)
backend/: .coverage  .coveragerc  .env.complete  .env.example  .env.staging.example  README.md  alembic.ini  auth_stub.py  coverage.json  coverage.xml  diagnose.py  diagnose.sh  diagnose_integrations.ipynb  diagnose_result.txt  import_seller_bot_workflow.py  pyproject.toml  pytest.ini  query_performance_report.json  railway.json  requirements-scraper.txt  requirements.txt  seeder.py  start.sh  test_integrations.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_soft_delete.py  003_add_email_verification.py  004_accounting_system.py  2024_11_26_crm_tables.py  (+12 more)
backend/api/: __init__.py  main.py
backend/domain/: __init__.py  exceptions.py
backend/integrations/: ARCHITECTURE_DIAGRAM.md  CONSOLIDATION_SUMMARY.md  EXAMPLES.md  HUBS_GUIDE.md  README.md  __init__.py  alerts.py  instagram_hub.py  metrics.py  n8n.py  resilience.py  tiktok_hub.py  tiktok_shop_service.py  typebot.py  whatsapp_hub.py
backend/monitoring/: __init__.py  cookie_monitor.py  social_metrics.py
backend/scraper/: __init__.py  cache.py  config.py  main.py  test_api_scraper.py
backend/scripts/: analyze_query_performance.py  diagnose_financial.py  diagnose_scraper.py  migrate_lifetime_users.py  setup_integrations.py  test_credit_consumption.py  test_integrations.py  test_live_purchase.py  test_sandbox_pix.py  test_tiktok_shop_api.py
backend/seller_bot/: __init__.py  agent.py  config.py  social_agent.py
backend/shared/: __init__.py  config.py  postgres.py  redis.py  security_config.py  sentry.py  storage.py
backend/tests/: conftest.py  test_automation_integration.py  test_integrations.py  test_routes.py  test_subscription.py
backend/workers/: __init__.py  analytics_pipeline.py  crm_jobs.py  post_scheduler.py  processors.py  scheduler.py  scheduler_runner.py  scraping_worker.py  whatsapp_reconnect.py
src-tauri/: Cargo.toml  tauri.conf.json  test_parsing
src-tauri/bindings/: ScraperConfig.ts
src-tauri/capabilities/: default.json
src-tauri/permissions/: commands.toml
src-tauri/src/: commands.rs  config.rs  database.rs  main.rs  models.rs  updater.rs
(+844 files in other folders)
