[package]
name = "tiktrend-finder"
version = "1.0.0"
description = "TikTrend Finder - Buscador de produtos em alta do TikTok Shop"
authors = ["TikTrend Team"]
edition = "2021"
default-run = "tiktrend-finder"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
scraper = "0.20"
regex = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"

# Scraping dependencies
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"
rand = "0.8"
anyhow = "1"

sysinfo = "0.30"
sha2 = "0.10"
ts-rs = { version = "9", features = ["serde-compat"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
